prometheus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
            - "--web.external-url=http://k3s.bulkington.ave/prometheus"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-secret-volume
              mountPath: /etc/prometheus-secret/
              readOnly: true
            # - name: prometheus-really-secret-volume
            #   mountPath: /etc/prometheus-really-secret/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-secret-volume
          projected:
            sources:
              - secret:
                  name: prom-server
                  items:
                  - key: tls.key
                    path: prom-server.key
                  - key: tls.crt
                    path: prom-server.crt
              - secret:
                  name: ca-crt

        - name: prometheus-storage-volume
          persistentVolumeClaim:
            claimName: prometheus-local-zfs-pvc
